qtjsbackend-opensource-src (5.1.0-2) UNRELEASED; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Reintroduce private headers. They are used by qtjsbackend.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Jul 2013 12:20:01 -0300

qtjsbackend-opensource-src (5.1.0-1) experimental; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Update Vcs-Browser and Vcs-Git headers.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update watch file.
  * Bump Qt build dependencies to 5.1.0~.
  * Remove libqt5v8-5-private-dev. So far no part of Qt seems to be using it.
    Can be re added later if needed.
    - Delete the files in the dh_auto_install override.
  * Update install files.
  * Update symbols files. The removed symbols where not present in the headers
    we shipped.
  * Make libqt5v8-5-dbg M-A: same to allow coinstallation of debugging symbols.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 09 Jul 2013 22:16:14 -0300

qtjsbackend-opensource-src (5.0.2-3) experimental; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Confirm symbols files for i386.

  [ Pino Toscano ]
  * debian/control: remove unused ${misc:Pre-Depends} from libqt5v8-5-dev,
    libqt5v8-5-private-dev and libqt5v8-5-dbg.
  * debian/control: remove unused ${shlibs:Depends} from
    libqt5v8-5-private-dev.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 22 Apr 2013 17:56:04 -0300

qtjsbackend-opensource-src (5.0.2-2) experimental; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Do not pass --list-missing. We are using --fail-missing in the exact rule.
  * Export QT_SELECT=qt5 to avoid a FTBFS when the debhelper patch that makes
    Qt4 as default get included.
    - Remove qt5-default as B-D, as it's not really needed now.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 20 Apr 2013 14:40:57 -0300

qtjsbackend-opensource-src (5.0.2-1) experimental; urgency=low
