@@ -2,6 +2,10 @@ qtjsbackend-opensource-src (5.1.0-2) UNRELEASED; urgency=low
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Reintroduce private headers. They are used by qtjsbackend.
+  * Make libqt5v8-5 provide qtjsbackend-api-5-1-0.
+    In this way we can know if external packages are using private headers.
+    - Add the necessary options in the symbols file.
+    - Add mark_private_symbols.sh.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Jul 2013 12:20:01 -0300
 
